...
                    Column {
                        Text(text = context.getString(R.string.Welcome_txt), color = Color.Black)

                        Text(
                            text = "$userName!", color = Color.Black,
                            fontSize = 18.sp, fontWeight = FontWeight.Bold,
                            modifier = Modifier.testTag("WelcomeText")
                        )
                    }
                    Icon(imageVector = Icons.Sharp.ExitToApp,
                        contentDescription = context.getString(R.string.logout_btn),
                        tint = MaterialTheme.colorScheme.primary,
                        modifier = Modifier
                            .size(24.dp)
                            .clickable {
                                showDialog = true

                            }
                            .testTag("LogoutIcon")  // Add the testTag
                    )
                }
            }
            //Banners
            item {
                if (showBannerLoading) {
...
                        modifier = Modifier
                            .fillMaxSize()
                            .height(200.dp),
                        contentAlignment = Alignment.Center
                    ) {
                        CircularProgressIndicator(
                            modifier = Modifier.testTag("Loading banners"))
                    }
                } else {
                   // Log.d("CustomerDashboardScreen", "Displaying banners: $banners")
                    Banners(banners)
                }
            }
...
                    Box(
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(50.dp),
                        contentAlignment = Alignment.Center
                    ) {
                        CircularProgressIndicator(modifier = Modifier.testTag("Loading categories"))
                    }
                } else {
                    CategoryList(navHostController= navHostController,categories)
                }
            }
            item {
...
    }
}

@Composable
fun CategoryItem(item:CategoryModel,isSelected:Boolean,onItemClick:()->Unit){
    val categoryName = "CategoryName"
    val testTag = "CategoryItem_${categoryName.replace(" ", "_")}"
   // val testTag = "CategoryItem_${item.title.replace(" ", "_")}"
    Log.d("CategoryItemTest", "Created test tag: $testTag")
    Row (modifier = Modifier
        .clickable(onClick = onItemClick)
        .background(
            color = if (isSelected) colorResource(id = R.color.purple_500) else Color.Transparent,
...
