<resources>
    <string name="app_name">Shopping App</string>
    <string name="Error_txt">Error</string>
    <string name="Ok_txt">OK</string>
    <string name="Login_btn">Login</string>
    <string name="Sign_up_txt">Create an Account Sign Up</string>
    <string name="Login_failed_txt">Login Failed</string>
    <string name="Sign_up_failed_txt">Sign up Failed</string>
    <string name="Login_des_txt">Login an account</string>
    <string name="Email_txt">User Email</string>
    <string name="Password_txt">Enter password</string>
    <string name="Confirm_pass_txt">Confirm Password</string>
    <string name="Forget_pass_txt">Forget Password?</string>
    <string name="create_acc_txt">Create an account</string>
    <string name="User_name_txt">User Name</string>
    <string name="Select_role_txt">Select Role</string>
    <string name="Customer_txt">customer</string>
    <string name="admin_txt">admin</string>
    <string name="Signup_btn">Create Account</string>
    <string name="password_error">Passwords does not match</string>
    <string name="already_have_acc_txt">I already have an Account Login</string>
    <string name="Welcome_txt">Welcome Back</string>
    <string name="See_all_txt">See All</string>
    <string name="Categories_txt">Categories</string>
    <string name="Recommendation_txt">Recommendation</string>
    <string name="Home_txt">Home</string>
    <string name="Cart_txt">Cart</string>
    <!--<string name="Favorite_txt">Favorite</string>-->
    <string name="Orders_txt">Orders</string>
    <string name="Profile_txt">Profile</string>
    <string name="logout_btn">Logout</string>
    <string name="support_txt">Support</string>
    <string name="email_validation_txt">Email cannot be empty</string>
    <string name="Invalid_email_txt">Invalid email format</string>
    <string name="Reset_pass_txt">Reset password</string>
    <string name="Enter_email_txt">Enter your email</string>
    <string name="Reset_txt">We will send you a message to set or reset your new password.</string>
    <string name="Reset_msg_txt">We’ve sent you an email with the instructions to reset your password.Please follow the link in the email.</string>
    <string name="Reset_fail_msg_txt">Failed to send password reset email</string>
    <string name="back_to_login_txt">Back to Login</string>
    <string name="Logged_out_txt">Logged out</string>
    <string name="Log_out_msg_txt">Logged out successfully</string>
    <string name="Banner_txt">Banner</string>
    <string name="Back_txt">Back</string>
    <string name="cart_empty_txt">Your cart is empty</string>
    <string name="Place_order_btn">Ready to Place Your Order?</string>
    <string name="Decrement_btn">Decrement</string>
    <string name="Increment_btn">Increment</string>
    <string name="Remove_btn">Remove</string>
    <string name="Rating_txt">Rating</string>
    <string name="Product_details_txt">Product Details</string>
    <string name="Add_to_cart_btn">Add to Cart</string>
    <string name="error_txt">An error occurred</string>
    <string name="add_product_txt">Add Product</string>
    <string name="product_name_txt">Product Name</string>
    <string name="product_desc_txt">Product Description</string>
    <string name="product_id">Product Id</string>
    <string name="product_price_txt">Product Price (in $)</string>
    <string name="product_image_txt">Select Product Image</string>
    <string name="choose_image_txt">Choose Image</string>
    <string name="selected_image_txt">Selected Image</string>
    <string name="product_image">Product Image</string>
    <string name="product_title">Product Title</string>
    <string name="product_succ_txt">Product Added Successfully</string>
    <string name="product_fail_txt">Failed to Add Product</string>
    <string name="product_error_txt">Please fill all fields, all fields are mandatory</string>
    <string name="upload_txt">Uploading...</string>
    <string name="wish_txt">We wish you have a good day!</string>
    <string name="cust_txt">Customer Management</string>
    <string name="order_mgmt_txt">Order Management</string>
    <string name="product_mgmt_txt">Product Management</string>
    <string name="product_add_txt">Add Products</string>
    <string name="product_category_txt">Product Category</string>
    <string name="select_category_txt">Select a Category</string>
    <string name="Show_invoice_btn">Show Invoice</string>
    <string name="no_orders_found">No order found</string>
    <string name="shop_more_btn">Continue Shopping</string>
    <string name="order_details">Order Details</string>
    <string name="no_order">No order found.</string>
    <string name="unknown_error">Unknown error</string>
    <string name="order_id">Order ID: %1$s</string>
    <string name="orderid">Order ID:</string>
    <string name="status">Status: %1$s</string>
    <string name="statusTxt">Status:</string>
    <string name="total_amt">Total Amount: $%1$.2f</string>
    <string name="totalamt">Total Amount: </string>
   <!-- <string name="total">Total: $%1$.2f</string>
    <string name="order_date">Order Date: $%1$</string> -->
    <string name="total">Total:</string>
    <string name="order_date">Order Date:</string>
    <string name="items">Items:</string>
    <string name="invoice">Invoice</string>
    <string name="customer_list">Customer List</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_no_order">No orders found for this customer.</string>
    <string name="show_details">Show Details</string>
    <string name="order_list">Admin Order List</string>
    <string name="confirm_txt">Confirm</string>
    <string name="cancel_txt">Cancel</string>
    <string name="logout_txt">Are you sure you want to logout?</string>
    <string name="confirm_btn">Accept</string>
    <string name="cancel_btn">Reject</string>
    <string name="completed_btn">Delivered</string>
    <string name="product_list">Product List</string>
    <string name="view_details">View Details</string>
    <string name="delete_btn">Delete</string>
    <string name="product_not_found">Product not found</string>
    <string name="update_product_btn">Update Product</string>
    <string name="helplineNumber">+1 800-123-4567</string>
    <string name="supportEmail">support@shoppingapp.com</string>
    <string name="returnExchangePolicy">Our Return and Exchange policy allows you to return or exchange items within 30 days of purchase.</string>
    <string name="helpline_text">Helpline Number</string>
    <string name="emailSupportTxt">Email Support</string>
    <string name="send_emailTxt">Send Email</string>
    <string name="return_policyTxt">Return &amp; Exchange Policy</string>
    <string name="return_policy_text">
        Our Return and Exchange policy allows you to return or exchange items within 30 days of purchase.
        - The item must be in its original condition.
        - You must provide proof of purchase.
        - Returns will be refunded to your original payment method.
        - Exchange can be done based on product availability.
    </string>
    <string name="order_status">Order Status</string>
    <string name="unknown_dates">Unknown Date</string>
    <string name="invalid_dates">Invalid Date</string>
    <string name="order_history">Order History</string>
    <string name="order_txt">Are you sure you want to place the order?</string>
    <string name="order_msg">You are about to finalize your purchase.</string>
    <string name="confirm_order_btn">Confirm Order</string>
    <string name="add_more_btn">Add More Items</string>
    <string name="reset_dialog_title">Check Your Email!</string>
    <string name="reset_dialog_title_fail">Password Reset Failed!</string>
    <string name="update_Profile">Update Profile</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="role">Role</string>
    <string name="profile_update_successfully">Profile updated successfully</string>
    <string name="profile_update_failed">Failed to update profile</string>
    <string name="click_to_open">Click to Open</string>
    <string name="features">Features</string>
    <string name="total_Orders">Total Orders</string>
    <string name="delivered_Orders">Delivered Orders</string>
    <string name="pending_Orders">Pending Orders</string>
    <string name="accepted_Orders">Accepted Orders</string>
    <string name="rejected_Orders">Rejected Orders</string>

</resources>